<resources>
    <!--App-->
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!--Notifications-->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">Downloads</string>
    <string name="notification_channel_description">Notifies about Downloads</string>

    <!--MainActivity-->
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="please_select">Please select the file to Download</string>
    <string name="enter_valid_url">Please enter a valid URL</string>

    <!--Download Options-->
    <string name="glide_description">Glide - Image Loadig Library by BumpTech</string>
    <string name="loadapp_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="url">Custom URL</string>
    <string name="enter_the_download_url">Enter the Download Url</string>

    <!--Detail Activity-->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="ok">OK</string>
    <string name="missing_file_name_key">Intent was missing \'FILE_NAME\' key!!</string>
    <string name="local_uri">Local URI:</string>
    <string name="uri">URI:</string>
    <string name="last_modified">Last Modified:</string>
    <string name="size_in_bytes">Size in Bytes:</string>
    <string name="media_type">Media Type:</string>
    <string name="file_id">File ID:</string>
    <string name="missing_information">Missing Information!!</string>
    <string name="file_details">Extra Details</string>

    <!--Loading Button-->
    <string name="download">Download</string>
    <string name="downloading">We are loading</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="open_file">Open File</string>
</resources>
